Fixed timing issues on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,6 +57,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 %raised {
@@ -65,6 +66,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 @for $level from 1 through 4 {
